Feat: Search course by name (#4)
Test: Add test cases for searching user and course (#4)